--- a/src/components/dropdown-choose/dropdown-choose.scss
+++ b/src/components/dropdown-choose/dropdown-choose.scss
@@ -65,6 +65,7 @@
     width: 100%;
     font-family: $font-family-primary;
     color: $text-color-brightness-75;
+    border: none;
     outline: none;
     cursor: pointer;
   }
