--- a/src/components/advantages/advantages.scss
+++ b/src/components/advantages/advantages.scss
@@ -3,7 +3,12 @@
   max-width: 300px;
   justify-content: flex-start;
 
-  &__li {
+  &__list {
+    margin: 0;
+    padding: 0;
+  }
+
+  &__item {
     position: relative;
     display: block;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
