--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -1,17 +1,10 @@
 .bullet-list {
   max-width: 292px;
+  margin: 0;
+  padding: 0;
+  display: block;
 
-  &__title {
-    margin-bottom: 18px;
-    margin-left: 20px;
-    display: inline-block;
-    font-size: 12px;
-    font-weight: bold;
-    text-transform: uppercase;
-    overflow-wrap: break-word;
-  }
-
-  &__li {
+  &__item {
     margin-bottom: 10px;
     display: flex;
     align-items: flex-start;
