--- a/src/components/card-check-in/card-check-in.scss
+++ b/src/components/card-check-in/card-check-in.scss
@@ -16,6 +16,7 @@
   }
 
   &__title {
+    margin: 0;
     margin-bottom: 20px;
     font-family: $font-family-primary;
     font-size: 24px;
@@ -54,7 +55,7 @@
   }
 
   &__offer {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
   }
 
   &__button {
