--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -15,6 +15,12 @@
     text-transform: uppercase;
   }
 
+  &__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
   &__item {
     margin-bottom: 10px;
     display: flex;
