--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -55,7 +55,7 @@
 
   &__achievement {
     line-height: 24px;
-
+    margin: 0;
     @media (max-width: $sm-desktop-width) {
       display: none;
     }
@@ -66,9 +66,11 @@
   }
 
   &__list {
+    padding: 0;
+    margin: 0;
     padding-top: 5px;
     width: 200px;
-
+    list-style: none;
     @media (max-width: $md-desktop-width) {
       margin-right: 5px;
       width: auto;
@@ -105,6 +107,7 @@
     color: $text-color-brightness-75;
     transition: $tr-fast;
     overflow-wrap: break-word;
+    text-decoration: none;
 
     &_active {
       font-weight: bold;
@@ -139,6 +142,7 @@
   &__subscribe-text {
     line-height: 24px;
     overflow-wrap: break-word;
+    margin: 0;
   }
 
   &__form-wrap {
@@ -155,7 +159,7 @@
   }
 
   &__basement-content {
-    padding: 25px 0;
+    padding: 22px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -174,6 +178,8 @@
   }
 
   &__social-list {
+    margin: 0;
+    padding: 0;
     @media (max-width: $sm-desktop-width) {
       margin-top: 20px;
     }
