--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,8 +10,8 @@
   }
 
   &__content {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 6px;
+    padding-bottom: 6px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -106,7 +106,7 @@
         width: 100%;
         font-size: 18px;
         vertical-align: center;
-
+        text-decoration: none;
         @media (max-width: $phone-width) {
           font-size: 16px;
         }
@@ -143,7 +143,7 @@
     line-height: 17px;
     color: $text-color-brightness-50;
     overflow-wrap: break-word;
-
+    text-decoration: none;
     &_active {
       font-weight: bold;
     }
@@ -214,6 +214,7 @@
   }
 
   &__burger {
+    border: none;
     position: relative;
     display: none;
     min-width: 30px;
