--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -10,6 +10,9 @@
   &__list {
     display: inline-flex;
     align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
   }
 
   &__item {
