--- a/src/components/subscription/subscription.pug
+++ b/src/components/subscription/subscription.pug
@@ -10,6 +10,7 @@ mixin subscription({title,placeholder, required})
 				pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
 				required=required
 			)
-			button(type="submit").subscription__button
+			.subscription__button-wrap
+				button(type="submit").button.button_subscribe
 
 
