--- a/src/components/subscription/subscription.scss
+++ b/src/components/subscription/subscription.scss
@@ -45,17 +45,9 @@
     }
   }
 
-  &__button {
+  &__button-wrap {
     position: absolute;
     right: 0;
     bottom: 0;
-    display: inline-block;
-    width: 46px;
-    height: 45px;
-    background-color: transparent;
-    background-image: url('~img/arrow-forward-colored.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    cursor: pointer;
   }
 }
