--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import '~utils/utils-scss/vars.scss';
+@import '~utils/utils-scss/focus-visible.scss';
 @import '~utils/utils-scss/normalize.scss';
 @import '~utils/utils-scss/fonts.scss';
 @import '~utils/utils-scss/button.scss';
@@ -45,44 +46,4 @@ body {
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-.js-focus-visible :focus:not(.focus-visible) {
-  outline: none;
-}
-
-.content {
-  flex: 1 0 auto;
-}
-
-.container {
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-  max-width: $desktop-width;
-  height: 100%;
-  flex: 0 0 auto;
-
-  @media screen and (max-width: $desktop-width) {
-    max-width: $md-desktop-width;
-  }
-
-  @media screen and (max-width: $md-desktop-width) {
-    padding: 0 10px;
-    max-width: $sm-desktop-width;
-  }
-
-  @media screen and (max-width: $sm-desktop-width) {
-    width: 100%;
-  }
-
-  @media (min-width: $phone-width) and (max-width: $table-width) {
-    padding: 0 18px;
-    width: 100%;
-  }
-
-  @media (min-width: $sm-phone-width) and (max-width: $phone-width) {
-    padding: 0 10px;
-    max-width: 100vw;
-  }
 }
