--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -16,84 +16,7 @@
 .room-details {
   &__container {
     @include container;
-  }
 
-  &__room-photos {
-    display: grid;
-    grid-template-columns: 2.15fr 1fr;
-    overflow: hidden;
-
-    @media (max-width: $desktop-width) {
-      max-height: 485px;
-    }
-
-    @media (max-width: $sm-desktop-width) {
-      display: block;
-      max-height: 100%;
-    }
-  }
-
-  &__photo {
-    @media (max-width: $sm-desktop-width) {
-      border: 5px solid #fff;
-    }
-  }
-
-  &__main-photo {
-    min-width: 100%;
-    min-height: 100%;
-
-    @media (max-width: $desktop-width) {
-      max-height: 485px;
-    }
-  }
-
-  &__another-photos {
-    @media (max-width: $sm-desktop-width) {
-      display: flex;
-    }
-
-    @media (max-width: $table-width) {
-      display: block;
-    }
-  }
-
-  &__another-photo {
-    min-width: 100%;
-    min-height: 50%;
-
-    @media (max-width: $desktop-width) {
-      max-height: calc(485px / 2);
-    }
-
-    @media (max-width: $sm-desktop-width) {
-      min-width: 50%;
-    }
-
-    @media (max-width: $table-width) {
-      min-width: 100%;
-    }
-  }
-
-  &__title {
-    margin-bottom: 20px;
-    display: inline-block;
-    max-width: 340px;
-    font-size: 19px;
-    line-height: 23px;
-    font-weight: bold;
-    overflow-wrap: break-word;
-
-    &_margin-l-20 {
-      margin-left: 20px;
-    }
-
-    @media (max-width: $phone-width) {
-      font-size: 15px;
-    }
-  }
-
-  &__main {
     padding-top: 69px;
     padding-bottom: 60px;
     display: flex;
@@ -106,6 +29,61 @@
     @media (max-width: $sm-desktop-width) {
       margin: 0 auto;
       max-width: $table-width;
+    }
+  }
+
+  &__room-photos {
+    display: flex;
+
+    @media (max-width: $sm-desktop-width) {
+      flex-wrap: wrap;
+    }
+  }
+
+  &__photo {
+    @media (max-width: $sm-desktop-width) {
+      border: 5px solid #fff;
+    }
+  }
+
+  &__main-photo {
+    display: block;
+    width: 70%;
+    @media (max-width: $sm-desktop-width) {
+      width: 100%;
+    }
+  }
+
+  &__another-photos {
+    @media (max-width: $sm-desktop-width) {
+      display: flex;
+    }
+  }
+
+  &__another-photo {
+    display: block;
+    height: 50%;
+    @media (max-width: $sm-desktop-width) {
+      width: 50%;
+      height: 100%;
+    }
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    display: inline-block;
+    max-width: 340px;
+    font-size: 19px;
+    line-height: 23px;
+    font-weight: bold;
+    overflow-wrap: break-word;
+
+    &_with-offset {
+      margin-left: 20px;
+    }
+
+    @media (max-width: $phone-width) {
+      font-size: 15px;
     }
   }
 
@@ -143,7 +121,7 @@
     margin-bottom: 10px;
 
     @media (max-width: $sm-desktop-width) {
-      margin: 0;
+      margin-top: 20px;
       margin-bottom: 30px;
     }
 
@@ -194,7 +172,7 @@
     display: flex;
   }
 
-  &__cancel-rule {
+  &__cancel {
     margin-left: 70px;
     max-width: 340px;
 
@@ -204,6 +182,7 @@
   }
 
   &__cancel-text {
+    margin: 0;
     font-size: 14px;
     line-height: 24px;
     white-space: pre-wrap;
