--- a/src/utils/utils-scss/button.scss
+++ b/src/utils/utils-scss/button.scss
@@ -12,9 +12,11 @@
   color: $button-text-color-primary;
   background: $button-color-primary;
   border-radius: 22px;
+  border: none;
   transition: $tr-fast;
   cursor: pointer;
   overflow-wrap: break-word;
+  text-decoration: none;
 
   @media screen and (min-width: $sm-desktop-width) and (max-width: $md-desktop-width) {
     max-width: 140px;
@@ -29,11 +31,16 @@
   }
 
   &_subscribe {
-    position: absolute;
-    top: calc(50% - 10px);
-    right: 0;
-    padding: 0;
-    border-radius: none;
+    display: inline-block;
+    width: 46px;
+    height: 45px;
+    background-color: transparent;
+    background-image: url('~img/arrow-forward-colored.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    border-radius: 0;
+    border: none;
   }
 
   &_with-icon {
