deleted excell code from global styles/moved all excell imports from pages to components where these dependencies are required #38

--- a/src/components/block-title/block-title.scss
+++ b/src/components/block-title/block-title.scss
@@ -3,7 +3,7 @@
   font-family: $font-family-primary;
   font-size: 12px;
   line-height: 15px;
-  font-weight: $bold;
+  font-weight: $font-weight-bold;
   white-space: pre-wrap;
   text-transform: uppercase;
   color: $text-color;
