--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -1,3 +1,6 @@
+include ~components/date-dropdown/date-dropdown
+include ~components/dropdown-choose/dropdown-choose
+
 mixin card-book(details)
   -var {number, type, priceForOneDay, discount, taxes} = details
   .card-book.js-card-book
