--- a/src/components/card-check-in/card-check-in.pug
+++ b/src/components/card-check-in/card-check-in.pug
@@ -1,3 +1,9 @@
+include ~components/text-field/text-field
+include ~components/masked-text-field/masked-text-field
+include ~components/toggle-buttons/toggle-buttons
+include ~components/checkbox/checkbox
+include ~components/radio/radio
+
 mixin card-check-in()
   .card-check-in
     .card-check-in__content
