--- a/src/components/card-selection/card-selection.pug
+++ b/src/components/card-selection/card-selection.pug
@@ -1,3 +1,6 @@
+include ~components/date-dropdown/date-dropdown
+include ~components/dropdown-choose/dropdown-choose
+
 mixin card-selection()
   .card-selection
     .card-selection__content
