--- a/src/utils/utils-scss/vars.scss
+++ b/src/utils/utils-scss/vars.scss
@@ -1,18 +1,11 @@
-// font-size
 $main-font-size: 18px;
-// font-weight
-
-$normal: 400;
-$bold: 700;
-
-// font-family
 
 $font-family-primary: 'Montserrat', arial, sans-serif;
 
-// line-height
-$line-height-primary: 1.4;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
 
-// media size
+$line-height-primary: 1.4;
 
 $desktop-width: 1440px;
 $md-desktop-width: 1160px;
@@ -21,12 +14,10 @@ $table-width: 768px;
 $phone-width: 480px;
 $sm-phone-width: 320px;
 
-// buttons color
 $button-color-primary: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
 $button-color-primaryHover: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
 $button-color-secondary: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
 
-// text color
 $text-color: #1f2041;
 $text-color-brightness-75: rgba(31, 32, 65, 0.75);
 $text-color-brightness-50: rgba(31, 32, 65, 0.5);
@@ -34,17 +25,14 @@ $text-color-brightness-25: rgba(31, 32, 65, 0.25);
 $button-text-color-primary: #fff;
 $button-text-color-secondary: #bc9cff;
 
-// other
 $primary-color: #bc9cff;
 $secondary-color: #6fcf97;
 $body-color: #e5e5e5;
 $bg-color-primary: #fff;
 $danger-color: #fc5c65;
 
-// transition
 $tr-fast: 0.25s;
 $tr-mid: 0.5s;
 
-// border
 $border-input: 1px solid rgba(31, 32, 65, 0.25);
 $border-input-hover: 1px solid rgba(31, 32, 65, 0.5);
