--- a/src/components/advantages/advantages.scss
+++ b/src/components/advantages/advantages.scss
@@ -60,7 +60,7 @@
     display: inline-block;
     font-family: $font-family-primary;
     font-size: 14px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
 
     @media (max-width: $phone-width) {
       font-size: 12px;
