--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -1,4 +1,5 @@
 @import '~/swiper/swiper-bundle.min.css';
+@import '~components/rate/rate';
 
 .card-room {
   $self: &;
@@ -112,7 +113,7 @@
     align-items: flex-end;
     font-family: $font-family-primary;
     line-height: 17px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
   }
 
@@ -158,7 +159,7 @@
   &__price {
     font-family: $font-family-primary;
     font-size: 14px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
 
     @media (max-width: $phone-width) {
       font-size: 12px;
@@ -183,6 +184,6 @@
 
   &__reviews-num {
     font-family: $font-family-primary;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
   }
 }
