--- a/src/components/card-selection/card-selection.scss
+++ b/src/components/card-selection/card-selection.scss
@@ -1,3 +1,9 @@
+@import '~air-datepicker/dist/css/datepicker.min.css';
+@import '~components/dropdown-choose/dropdown-choose';
+@import '~components/date-dropdown/date-dropdown';
+@import '~components/datepicker/datepicker';
+@import '~components/block-title/block-title';
+
 .card-selection {
   width: 100%;
   max-width: 380px;
@@ -26,7 +32,7 @@
     font-family: $font-family-primary;
     font-size: 24px;
     line-height: 29px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     text-transform: initial;
 
     @media (max-width: $phone-width) {
