--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -121,7 +121,7 @@
       font-family: $font-family-primary;
       font-size: 14px;
       line-height: 18px;
-      font-weight: $bold;
+      font-weight: $font-weight-bold;
       white-space: pre;
       white-space: break-spaces;
       text-overflow: ellipsis;
