--- a/src/components/circle-diagram/circle-diagram.scss
+++ b/src/components/circle-diagram/circle-diagram.scss
@@ -36,7 +36,7 @@
     font-family: $font-family-primary;
     font-size: 16px;
     line-height: 15px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     text-align: center;
     white-space: pre-wrap;
     color: $primary-color;
