--- a/src/components/dropdown-choose/dropdown-choose.scss
+++ b/src/components/dropdown-choose/dropdown-choose.scss
@@ -40,7 +40,7 @@
   &__title {
     font-family: $font-family-primary;
     font-size: 12px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     text-transform: uppercase;
 
     @media (max-width: $phone-width) {
@@ -116,7 +116,7 @@
   &__item-count {
     font-family: $font-family-primary;
     font-size: 12px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
   }
 
   &__item-text {
@@ -124,7 +124,7 @@
     font-family: $font-family-primary;
     font-size: 12px;
     line-height: 15px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     text-transform: uppercase;
 
     @media (max-width: $phone-width) {
@@ -164,7 +164,7 @@
     justify-content: space-between;
     font-family: $font-family-primary;
     font-size: 12px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     text-transform: uppercase;
 
     @media (max-width: $phone-width) {
