--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -106,7 +106,7 @@ ul.simple-pagination {
   .active {
     font-family: $font-family-primary;
     font-size: 12px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     color: #fff;
     background: $button-color-primary;
     border-radius: 50%;
