--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -1,3 +1,5 @@
+@import '~components/like-button/like-button';
+
 .review {
   max-width: 710px;
 
@@ -14,7 +16,7 @@
   &__name {
     font-family: $font-family-primary;
     font-size: 14px;
-    font-weight: $bold;
+    font-weight: $font-weight-bold;
     color: $text-color-brightness-75;
 
     @media (max-width: $phone-width) {
