--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -4,7 +4,7 @@ block head
   meta(name="description" content="Отель, поиск номеров")
   meta(name="keywords" content="отель, поиск номеров, отдых, комнаты")
 block content
-  .container
+  main.index
     ul(class="index__list")
       li(class="index__list-item")
         a(href="/form-elements.html" class="index__link") form-elements
