--- a/src/utils/utils-scss/button.scss
+++ b/src/utils/utils-scss/button.scss
@@ -7,7 +7,7 @@
   font-family: $font-family-primary;
   font-size: 12px;
   line-height: 1;
-  font-weight: $bold;
+  font-weight: $font-weight-bold;
   text-transform: uppercase;
   color: $button-text-color-primary;
   background: $button-color-primary;
