--- a/src/utils/utils-scss/fonts.scss
+++ b/src/utils/utils-scss/fonts.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Montserrat';
-  src:
-    url('~fonts/montserrat/montserrat-regular.woff2'),
+  src: url('~fonts/montserrat/montserrat-regular.woff2'),
     url('~fonts/montserrat/montserrat-regular.woff');
   font-weight: 400;
   font-style: normal;
@@ -10,6 +9,6 @@
 @font-face {
   font-family: 'Montserrat';
   src: url('~fonts/montserrat/montserrat-bold.woff2'), url('~fonts/montserrat/montserrat-bold.woff');
-  font-weight: $bold;
+  font-weight: $font-weight-bold;
   font-style: normal;
 }
