--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -90,7 +90,8 @@
       height: 100%;
       opacity: 0;
       content: '';
-      box-shadow: -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
+      box-shadow:
+        -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
         50px 0 50px 23px rgba(0, 0, 0, 0.25) inset;
       transition: $tr-fast;
     }
