fixed js at pug's files #38

--- a/src/components/toggle-buttons/toggle-buttons.pug
+++ b/src/components/toggle-buttons/toggle-buttons.pug
@@ -1,5 +1,5 @@
 mixin toggle-buttons()
-  .toggle-buttons(class=className)
+  .toggle-buttons
     .toggle-buttons__container
       label.toggle-buttons__label 
         input.toggle-buttons__checkbox(type="checkbox")
