moved button to components folder #38

--- a/src/components/card-check-in/card-check-in.scss
+++ b/src/components/card-check-in/card-check-in.scss
@@ -1,4 +1,4 @@
-@import '~utils/utils-scss/button.scss';
+@import '~components/button/button';
 @import '~components/text-field/text-field';
 @import '~components/toggle-buttons/toggle-buttons';
 @import '~components/checkbox/checkbox';
