--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,6 +1,6 @@
 @import '~utils/utils-scss/vars.scss';
 @import '~utils/utils-scss/fonts.scss';
-@import '~utils/utils-scss/button.scss';
+@import '~components/button/button';
 @import '~src/main.scss';
 @import '~components/card-book/card-book';
 @import '~components/card-selection/card-selection';
