--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -1,5 +1,5 @@
 @import '~src/main.scss';
-@import '~utils/utils-scss/button.scss';
+@import '~components/button/button';
 @import '~components/card-sign-in/card-sign-in';
 
 .sign-in {
