--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,8 +13,8 @@
   }
 
   &__content {
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding-top: 13px;
+    padding-bottom: 13px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -128,6 +128,8 @@
   &__list {
     display: inline-flex;
     flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
   }
 
   &__list-item {
