deleted min-height at landing #38

--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -40,6 +40,7 @@ block content
           ],isEntered: false})
   main.landing-page
     .landing-page__container
+      .landing-page__room-selection
         +card-selection()
     .landing-page__container
       p.landing-page__description
