--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -4,7 +4,6 @@
 .landing-page {
   padding-top: 70px;
   display: flex;
-  min-height: calc(900px - 70px);
   flex-direction: column;
   justify-content: space-between;
   background-image: url('./images/landing-page-bg.jpg');
@@ -22,6 +21,14 @@
   &__main {
     display: flex;
     justify-content: space-between;
+  }
+
+  &__room-selection {
+    padding-bottom: 320px;
+
+    @media screen and (max-width: $sm-desktop-width) {
+      padding-bottom: 200px;
+    }
   }
 
   &__description {
