changed style of adding class at index.pug #38

--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -6,19 +6,19 @@ block head
 block content
   main.index
     ul(class="index__list")
-      li(class="index__list-item")
-        a(href="/form-elements.html" class="index__link") form-elements
-      li(class="index__list-item")
-        a(href="/landing.html" class="index__link") landing page
-      li(class="index__list-item")
-        a(href="/headers-footers.html" class="index__link") headers and footers
-      li(class="index__list-item")
-        a(href="/registration.html" class="index__link") reginstration page
-      li(class="index__list-item")
-        a(href="/room-details.html" class="index__link") room-details page
-      li(class="index__list-item")
-        a(href="/sign-in.html" class="index__link") sign in page
-      li(class="index__list-item")
-        a(href="/filter.html" class="index__link") filter page
-      li(class="index__list-item")
-        a(href="/cards.html" class="index__link") cards page
+      li.index__list-item
+        a(href="/form-elements.html").index__link form-elements
+      li.index__list-item
+        a(href="/landing.html").index__link landing page
+      li.index__list-item
+        a(href="/headers-footers.html").index__link headers and footers
+      li.index__list-item
+        a(href="/registration.html").index__link registration page
+      li.index__list-item
+        a(href="/room-details.html").index__link room-details page
+      li.index__list-item
+        a(href="/sign-in.html").index__link sign in page
+      li.index__list-item
+        a(href="/filter.html").index__link filter page
+      li.index__list-item
+        a(href="/cards.html").index__link cards page
