imported normalize.css from node_modules #38

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
+@import '~/normalize.css/normalize.css';
 @import '~utils/utils-scss/vars.scss';
 @import '~utils/utils-scss/focus-visible.scss';
-@import '~utils/utils-scss/normalize.scss';
 @import '~utils/utils-scss/fonts.scss';
 @import '~utils/utils-scss/mixins.scss';
 @import '~components/header/header';
