moved main.scss to utils/scss, changed folder's name utils-scss to scss #38

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,5 +1,5 @@
-@import '~utils/utils-scss/vars.scss';
-@import '~utils/utils-scss/fonts.scss';
+@import '~utils/scss/vars.scss';
+@import '~utils/scss/fonts.scss';
 
 .index {
   &__list {
