--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -1,6 +1,6 @@
 @import '~air-datepicker/dist/css/datepicker.min.css';
-@import '~utils/utils-scss/vars.scss';
-@import '~src/main.scss';
+@import '~utils/scss/vars.scss';
+@import '~utils/scss/main.scss';
 @import '~components/photo-preview/photo-preview';
 @import '~components/advantages/advantages';
 @import '~components/circle-diagram/circle-diagram';
