--- a/src/utils/scss/main.scss
+++ b/src/utils/scss/main.scss
@@ -1,8 +1,8 @@
 @import '~/normalize.css/normalize.css';
-@import '~utils/utils-scss/vars.scss';
-@import '~utils/utils-scss/focus-visible.scss';
-@import '~utils/utils-scss/fonts.scss';
-@import '~utils/utils-scss/mixins.scss';
+@import '~utils/scss/vars.scss';
+@import '~utils/scss/focus-visible.scss';
+@import '~utils/scss/fonts.scss';
+@import '~utils/scss/mixins.scss';
 @import '~components/header/header';
 @import '~components/footer/footer';
 @import '~components/svg-icons/svg-icons';
