--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,7 +1,7 @@
-@import '~utils/utils-scss/vars.scss';
-@import '~utils/utils-scss/fonts.scss';
+@import '~utils/scss/vars.scss';
+@import '~utils/scss/fonts.scss';
 @import '~components/button/button';
-@import '~src/main.scss';
+@import '~utils/scss/main.scss';
 @import '~components/card-book/card-book';
 @import '~components/card-selection/card-selection';
 @import '~components/card-check-in/card-check-in';
