--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -1,7 +1,7 @@
 @import '~air-datepicker/dist/css/datepicker.min.css';
-@import '~utils/utils-scss/vars.scss';
-@import '~utils/utils-scss/fonts.scss';
-@import '~src/main.scss';
+@import '~utils/scss/vars.scss';
+@import '~utils/scss/fonts.scss';
+@import '~utils/scss/main.scss';
 @import '~components/filter-date/filter-date';
 @import '~components/dropdown-choose/dropdown-choose';
 @import '~components/datepicker/datepicker';
