--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -1,5 +1,5 @@
 @import '~air-datepicker/dist/css/datepicker.min.css';
-@import '~src/main';
+@import '~utils/scss/main';
 @import '~components/text-field/text-field';
 @import '~components/logo/logo';
 @import '~components/range-slider/range-slider';
