--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,4 +1,4 @@
-@import '~src/main.scss';
+@import '~utils/scss/main.scss';
 @import '~components/card-selection/card-selection';
 
 .landing-page {
