moved header and footer styles from main.scss to pages.scss #38

--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -2,6 +2,8 @@
 @import '~utils/scss/vars.scss';
 @import '~utils/scss/fonts.scss';
 @import '~utils/scss/main.scss';
+@import '~components/header/header';
+@import '~components/footer/footer';
 @import '~components/filter-date/filter-date';
 @import '~components/dropdown-choose/dropdown-choose';
 @import '~components/datepicker/datepicker';
