--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -1,5 +1,7 @@
 @import '~utils/scss/main.scss';
 @import '~components/card-check-in/card-check-in';
+@import '~components/header/header';
+@import '~components/footer/footer';
 
 .registration {
   background-image: url('./images/landing-page-bg-2.jpg');
