--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -1,6 +1,8 @@
 @import '~air-datepicker/dist/css/datepicker.min.css';
-@import '~utils/scss/vars.scss';
-@import '~utils/scss/main.scss';
+@import '~utils/scss/vars';
+@import '~utils/scss/main';
+@import '~components/header/header';
+@import '~components/footer/footer';
 @import '~components/photo-preview/photo-preview';
 @import '~components/advantages/advantages';
 @import '~components/circle-diagram/circle-diagram';
