--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -1,4 +1,6 @@
 @import '~utils/scss/main.scss';
+@import '~components/header/header';
+@import '~components/footer/footer';
 
 .headers-footers {
   width: 100%;
