--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -1,5 +1,7 @@
 @import '~utils/scss/main.scss';
 @import '~components/button/button';
+@import '~components/header/header';
+@import '~components/footer/footer';
 @import '~components/card-sign-in/card-sign-in';
 
 .sign-in {
