--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -38,9 +38,8 @@ block content
               dropdown: true
             },
           ],isEntered: false})
-  .content
-    .registration
-      .registration__container
-        main.registration__main
-          +card-check-in()
+  main.registration
+    .registration__container
+      .registration__card
+        +card-check-in()
   +footer()
